# claude_aws_bedrock_token_generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
src/: core.py  main.py
tests/: test_cli.py  test_core.py
